# hypnotic

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  hello.ic  hypnotic.py  pyproject.toml  requirements-dev.txt  simple.ic  test.ic
.github/workflows/: build-binaries.yml  ci.yml  publish.yml
examples/: arrays.ic  fibonacci.ic  fizzbuzz.ic  guessing_game.ic  lambda.ic  showcase.ic  slots.ic
tests/: __init__.py  test_hypnotic.py
