[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypnotic"
version = "0.1.0"
description = "A programming language that doesn't scream at you. Phonetic shortcuts, forgiving syntax, zero indentation fascism."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "hypnotIC"}
]
keywords = ["programming-language", "interpreter", "esoteric", "fun"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/zachseven/hypnotic"
Repository = "https://github.com/zachseven/hypnotic"
Issues = "https://github.com/zachseven/hypnotic/issues"

[project.scripts]
hypnotic = "hypnotic:main"

[tool.setuptools]
py-modules = ["hypnotic"]
